# DeathStarBench

mediaMicroservices/: .env.template  Dockerfile  docker-compose.yml  init-couchdb.sh  init-postgresql.sh  init-scylladb.sh  media_service.thrift
mediaMicroservices/gen-cpp/: CastInfoService.cpp  CastInfoService.h  CastInfoService_server.skeleton.cpp  ComposeReviewService.cpp  ComposeReviewService.h  ComposeReviewService_server.skeleton.cpp  MovieIdService.cpp  MovieIdService.h  MovieIdService_server.skeleton.cpp  MovieInfoService.cpp  MovieInfoService.h  MovieInfoService_server.skeleton.cpp  MovieReviewService.cpp  MovieReviewService.h  MovieReviewService_server.skeleton.cpp  PageService.cpp  PageService.h  PageService_server.skeleton.cpp  PlotService.cpp  PlotService.h  PlotService_server.skeleton.cpp  RatingService.cpp  RatingService.h  RatingService_server.skeleton.cpp  ReviewStorageService.cpp  ReviewStorageService.h  ReviewStorageService_server.skeleton.cpp  TextService.cpp  TextService.h  TextService_server.skeleton.cpp  UniqueIdService.cpp  UniqueIdService.h  UniqueIdService_server.skeleton.cpp  UserReviewService.cpp  UserReviewService.h  UserReviewService_server.skeleton.cpp  UserService.cpp  UserService.h  UserService_server.skeleton.cpp  media_service_types.cpp  (+1 more)
mediaMicroservices/gen-lua/: media_service_MovieIdService.lua
mediaMicroservices/gen-py/media_service/: ttypes.py
mediaMicroservices/src/: CMakeLists.txt  utils_couchdb.h
mediaMicroservices/src/MovieIdService/: CMakeLists.txt  MovieIdHandler.h  MovieIdService.cpp
(+29 files in other folders)
